Better naming of a method. Clarified usage of constants in PDF views.